fix overflow

--- a/app/components/Layout/HomeLayout/HomeLayout.module.scss
+++ b/app/components/Layout/HomeLayout/HomeLayout.module.scss
@@ -4,7 +4,7 @@
 .grid {
   &__layout {
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto minmax(0, 1fr);
     height: 100%;
   }
 
